--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ name = "mbml_numpyro"
 
 [tool.poetry2conda.dependencies]
 commitizen = { channel = "pip" }
-poetry2conda = {channel = "pip"}
+poetry2conda = {channel = "pip" }
+black = { channel = "pip" }
+pylint = { channel = "pip" }
 
 [tool.poetry.dependencies]
 python = ">=3.7.1,<4.0"
@@ -19,6 +21,9 @@ pandas = "^1.2.4"
 pytest = "^5.2"
 commitizen = "^2.17.11"
 poetry2conda = "^0.3.0"
+black = "^21.6b0"
+mypy = "^0.910"
+pylint = "^2.9.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
