--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,18 @@ commitizen = { channel = "pip" }
 poetry2conda = {channel = "pip" }
 black = { channel = "pip" }
 pylint = { channel = "pip" }
+matplotlib = { channel = "conda-forge"}
 
 [tool.poetry.dependencies]
 python = ">=3.7.1,<4.0"
 pandas = "^1.2.4"
+jupyter = "^1.0.0"
+matplotlib = "^3.4.2"
+statsmodels = "^0.12.2"
+seaborn = "^0.11.1"
+tabulate = "^0.8.9"
+nbconvert = "^6.1.0"
+arviz = "^0.11.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
