--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ seaborn = "^0.11.1"
 tabulate = "^0.8.9"
 nbconvert = "^6.1.0"
 arviz = "^0.11.2"
+ipykernel = "^6.0.1"
+ipython = "^7.25.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
