--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ nbconvert = "^6.1.0"
 arviz = "^0.11.2"
 ipykernel = "^6.0.1"
 ipython = "^7.25.0"
+jupytext = "^1.11.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
