build(environment.yaml-poetry.lock-pyproject.toml): add daft and get the latest numpyro from github for predictive with infer_discrete keyword

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ black = { channel = "pip" }
 pylint = { channel = "pip" }
 matplotlib = { channel = "conda-forge"}
 funsor = { channel = "pip" }
+daft = { channel = "pip" }
 
 [tool.poetry.dependencies]
 python = ">=3.7.1,<4.0"
@@ -29,6 +30,7 @@ ipykernel = "^6.0.1"
 ipython = "^7.25.0"
 jupytext = "^1.11.3"
 funsor = "^0.4.1"
+daft = "^0.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
